// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Basic renders correctly 1`] = `
<div>
  <div
    class="css-12o2rsn-boxStyles-FieldContainer"
    data-field-container="true"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:r0:"
    >
      <span
        class="css-1jywj6f-boxStyles"
      >
        Name
      </span>
      <span
        class="css-axuon-boxStyles"
      >
         
        (optional)
      </span>
    </label>
    <input
      aria-invalid="false"
      aria-required="false"
      class="css-mtd7ku"
      id="field-:r0:"
      type="text"
    />
    <div
      aria-hidden="true"
      class="css-9l8g4f-Field"
    />
  </div>
</div>
`;

exports[`TextInput Invalid renders correctly 1`] = `
<div>
  <div
    class="css-9biixk-boxStyles-FieldContainer"
    data-field-container="true"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:r4:"
    >
      <span
        class="css-1jywj6f-boxStyles"
      >
        Name
      </span>
      <span
        class="css-axuon-boxStyles"
      >
         
        (optional)
      </span>
    </label>
    <div
      class="css-1xkbxzi-boxStyles"
    >
      <div
        class="css-1ldvxqr-boxStyles"
      >
        <svg
          aria-hidden="false"
          aria-label="Error"
          class="css-rg60c6-FieldMessage"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.472 1h7.056c.19 0 .43-.001.665.055.204.05.399.13.578.24.206.126.375.296.509.43l.036.037 4.922 4.922.037.036c.134.134.304.303.43.51.11.178.19.373.24.577.056.236.055.475.055.665v7.056c0 .19.001.43-.055.665-.05.204-.13.399-.24.578a2.799 2.799 0 0 1-.43.509l-.037.036-4.922 4.922-.036.037a2.799 2.799 0 0 1-.51.43c-.178.11-.373.19-.577.24a2.795 2.795 0 0 1-.665.055H8.472c-.19 0-.43.001-.665-.055-.204-.05-.399-.13-.578-.24-.206-.126-.375-.296-.509-.43l-.036-.037-4.922-4.922-.036-.036c-.135-.134-.305-.303-.431-.51a1.999 1.999 0 0 1-.24-.577A2.795 2.795 0 0 1 1 15.528V8.472c0-.19-.001-.43.055-.665a2 2 0 0 1 .24-.578c.126-.206.296-.375.43-.509l.037-.036 4.922-4.922.036-.036c.134-.135.303-.305.51-.431a2 2 0 0 1 .577-.24C8.043 1 8.282 1 8.472 1Zm.235 6.293a1 1 0 1 0-1.414 1.414L10.586 12l-3.293 3.293a1 1 0 0 0 1.414 1.414L12 13.414l3.293 3.293a1 1 0 0 0 1.414-1.414L13.414 12l3.293-3.293a1 1 0 0 0-1.414-1.414L12 10.586 8.707 7.293Z"
            fill="currentColor"
            stroke="none"
          />
        </svg>
      </div>
      <span
        class="css-o7cidz-boxStyles"
        id="field-:r4:-message"
      >
        This field is required
      </span>
    </div>
    <input
      aria-describedby="field-:r4:-message"
      aria-invalid="true"
      aria-required="false"
      class="css-mtd7ku"
      id="field-:r4:"
      type="text"
    />
    <div
      aria-hidden="true"
      class="css-9l8g4f-Field"
    />
  </div>
</div>
`;

exports[`TextInput With hint renders correctly 1`] = `
<div>
  <div
    class="css-12o2rsn-boxStyles-FieldContainer"
    data-field-container="true"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:r2:"
    >
      <span
        class="css-1jywj6f-boxStyles"
      >
        Name
      </span>
      <span
        class="css-axuon-boxStyles"
      >
         
        (optional)
      </span>
    </label>
    <span
      class="css-1jndov8-boxStyles"
      id="field-:r2:-hint"
    >
      Hint text
    </span>
    <input
      aria-describedby="field-:r2:-hint"
      aria-invalid="false"
      aria-required="false"
      class="css-mtd7ku"
      id="field-:r2:"
      type="text"
    />
    <div
      aria-hidden="true"
      class="css-9l8g4f-Field"
    />
  </div>
</div>
`;
